<resources>
    <string name="app_name">HoneyCanYouBuyThis</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_title">Sign in</string>
    <string name="home_title">Grocery Lists</string>
    <string name="good_weather_text">What a time to go shopping!</string>
    <string name="bad_weather_text">This might not be the best time for shopping</string>
    <string name="register_button">Haven\'t registered yet?</string>
    <string name="register_title">Register</string>
    <string name="display_name_hint">Display name</string>
    <string name="profile_title">Profile</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="item_count">%d items</string>
    <string name="weather_api_url">https://api.weatherapi.com/v1/current.json?key=ed534e0312cb47ffa0c133832252003&amp;q=Jerusalem&amp;aqi=no</string>
    <string name="logout">Logout</string>
</resources>